gradle: use refreshVersions plugin